[package]
name = "chaos-gl"
version = "0.0.1"
edition = "2021"
description = "Chaos Attractor Visualisation in Rust"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "None"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.20", features=["csr"] }
